--- a/carouselStyle.css
+++ b/carouselStyle.css
@@ -1,7 +1,7 @@
 main {
 	font-family: Garamond;
 		   width: 90%;
-		   height: 4rem;
+		   height: 2rem;
 		   padding: 6rem;
        	margin-right: auto;
 	      margin-left: 5%; 
@@ -61,7 +61,7 @@ h3 {
 .carousel-item {
    margin-top: 3%;
    margin-right: 5%;
-   margin-left: 5%;
+   margin-left: 3%;
    align-self: center;
    height: 7%;
    width: 30%;
@@ -88,12 +88,14 @@ h3 {
 }
 
 .title {
+  font-family: Garamond;
    text-align: center;
    overflow: hidden;
    background-color: white;
  }
  
  nav {
+  font-family: Garamond;
    background-color: white;
    display: inline-block;
    text-align: center;
@@ -144,3 +146,4 @@ h3 {
    background-color: #FFC3FF;
  }
  
+ footer {  text-align: center;  overflow: hidden;  background-color: white; }
