--- a/carouselStyle.css
+++ b/carouselStyle.css
@@ -1,7 +1,7 @@
 main {
 	font-family: Garamond;
 		  width: 90%;
-		  padding: 6rem;
+		  padding: 2rem;
 	    margin-left: 5%; 
 		  margin-right: 5%;
       align-items: center;
@@ -24,19 +24,14 @@ header h1,p{text-align: center; font-family: Garamond}
 
 
 
-.d-block w-100 {
+.d-block .w-100 {
    padding: 5%;
    align-items: center;
 }
 
 
 
-.carousel-inner {
-   align-self: center;
-   width: 20%;
-   padding: 3%;
 
-}
 
 h3 {
    text-shadow: 2px 2px grey;
@@ -52,7 +47,7 @@ h3 {
    margin-right: 5%;
    margin-left: 3%;
    align-self: center;
-   height: 7%;
+   height: 10%;
    width: 30%;
    object-fit: cover;
 
