--- a/carouselStyle.css
+++ b/carouselStyle.css
@@ -11,7 +11,10 @@ head {
  
    } 
 
-header h1,p{text-align: center; font-family: Garamond} 
+header h1,p{
+text-align: center; 
+font-family: Garamond;
+} 
 
 .carousel-slide {
    margin-top: 2%; 
