--- a/carouselStyle.css
+++ b/carouselStyle.css
@@ -127,4 +127,4 @@ h3 {
    background-color: #FFC3FF;
  }
  
- footer {  text-align: center;  overflow: hidden;  background-color: white; }
+ footer {  text-align: center;  overflow: hidden;  background-color: white; font-family: Garamond;}
